# A200

./: .gitignore  .gitmodules  55-iminect-usb.rules  README.md  sdk说明.md
include/: ImiCameraDefines.h
libs/: imi.ini
linux/include/: ImiCamera.h  ImiDefines.h  ImiNect.h  ImiProperties.h  ImiUpgrade.h
linux/libs/: imi.ini
linux/src/: CMakeLists.txt  main.cpp  test.cpp  test2.cpp
linux/src/Common/: Render.cpp  Render.h  Render2.cpp  Render2.h  Util.cpp  Utill.h
src/: CMakeLists.txt  main.cpp
src/Common/: Render.cpp  Render.h  Util.cpp
win/: 点云.md
win/Include/ImiNect/: ImiCamera.h  ImiCameraDefines.h  ImiDefines.h  ImiPlatform.h  ImiProperties.h  ImiSkeleton.h  ImiUpgrade.h
win/Include/d3d/: D2D1.h  D2DBaseTypes.h  D3D10.h  D3D10_1.h  D3D10_1shader.h  D3D11.h  D3D11SDKLayers.h  D3D11Shader.h  D3DCSX.h  D3Dcommon.h  D3Dcompiler.h  audiodefs.h  comdecl.h  d3d10misc.h  d3d9.h  d3d9caps.h  d3dx9.h  d3dx9anim.h  d3dx9core.h  d3dx9math.inl  d3dx9mesh.h  d3dx9shader.h
win/Redist/Win32/: ImiCamera.lib  ImiNect.lib  imi.ini
win/Redist/x64/: imi.ini
win/src/: CMakeLists.txt  DepthViewer.cpp  PointCloudViewer.cpp  color_viewer.cpp  helloword.cpp  main.cpp  open_signal_steam.cpp  open_two_stream.cpp  open_uvc_camera.cpp  pointcloud.cpp  test.cpp
win/src/Common/: Render.cpp  Render.h  Render2.cpp  Render2.h  Util.cpp  Util.h
